# plugin-stt-sherpa-onnx

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: download_models.py
src/speechmux_plugin_stt_sherpa_onnx/: __init__.py  config.py  engine.py  recognizer.py
tests/: conftest.py  test_engine.py  test_stream.py
